// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudStorageForm should save on apply click for create 1`] = `
Object {
  "azureAccountKey": "key",
  "azureAccountName": "some name",
  "azureConnectionType": "azureFiles",
  "azureCustomerName": "name",
  "azureShareName": "share name",
  "connectionType": "azure",
}
`;

exports[`CloudStorageForm should save on apply click for edit 1`] = `
Object {
  "azureAccountKey": "key",
  "azureAccountName": "some name",
  "azureConnectionType": "Azure Files",
  "azureCustomerName": "name",
  "azureShareName": "share name",
  "connectionType": "azure",
  "id": "id",
}
`;

exports[`CloudStorageForm should show error on apply click 1`] = `
Object {
  "azureAccountKey": "key",
  "azureAccountName": "some name",
  "azureConnectionType": "Azure Files",
  "azureCustomerName": "name",
  "azureShareName": "share name",
  "connectionType": "azure",
  "id": "id",
}
`;
